Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-20007

Wrong proc entry cleared on pool spill proc registration failure

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.18.0
    • None
    • None
    • 3
    • 9223372036854775807

      In lod_pool_new(), when lprocfs_register() for pool_spill_proc_entry fails, the error handler incorrectly NULLs pool_proc_entry instead of pool_spill_proc_entry:

       

          if (IS_ERR(new_pool->pool_spill_proc_entry)) {
              rc = PTR_ERR(new_pool->pool_spill_proc_entry);
              new_pool->pool_proc_entry = NULL; // should be new_pool->pool_spill_proc_entry = NULL;
              lod_pool_putref(new_pool);
          }

       

       

            skoyama Sohei Koyama
            skoyama Sohei Koyama
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: