LU-20007 lod: fix wrong proc entry cleared on spill error

In lod_pool_new(), when lprocfs_register() for
pool_spill_proc_entry fails, pool_proc_entry is cleared
instead of pool_spill_proc_entry.

Fixes: 0a998f4723 ("LU-14825 lod: pool spilling")
Signed-off-by: Sohei Koyama <skoyama@ddn.com>
Change-Id: I45818b8523eb27c9a66b0e0706794be7f93c1b12
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/64630
Reviewed-by: Alex Zhuravlev <bzzz@whamcloud.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>